Commit on Master

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,42 @@
-Copy the config from ../dist/config.json, and put your own parameters
+{
+    "user": {
+        "instagram": {
+            "username": "foobar",
+            "password": "fooBAR"
+        }
+    },
+    "limits": {
+        "maxRetry": 2,
+        "like": {
+            "min": 0,
+            "max": 10000
+        },
+        "comment": {
+            "min": 100,
+            "max": 10000
+        },
+        "follow": {
+            "min": 200,
+            "max": 10000
+        }
+    },
+    "tags": {
+        "dog": {
+            "like": 3,
+            "comment": 2,
+            "follow": 1
+        },
+        "cat": {
+            "like": 3,
+            "comment": 2,
+            "follow": 1
+        }
+    },
+    "comments": [
+        "awesome",
+        "wow",
+        "nice pic"
+    ],
+    "blacklist": [],
+    "whitelist": []
+}
